--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>{{ site.name }}</title>
-    <meta name="description" content="{{ site.meta_description}}" />
+    <meta name="description" content="{{ site.meta_description }}" />
+    <meta name="author" content="{{ site.meta_author }}" />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
