--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,8 +68,7 @@ post_class: post-template
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p> 
-                    Johannes enjoys finding simple solutions to difficult problems.<br/>
-                    Find him on <a href="https://twitter.com/jstaffans">Twitter</a> or <a href="https://www.github.com/jstaffans">Github</a>.
+                    Find me on <a href="https://twitter.com/jstaffans">Twitter</a> or <a href="https://www.github.com/jstaffans">Github</a>!
                     </p>
                 </section>                
             {% endif %}
