--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,15 +1,20 @@
-<section class="disqus">
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
+<div id="disqus_thread"></div>
+<script>
 
-        var disqus_shortname = ''; 
-        var disqus_developer = 0; // developer mode is on
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-</section>
+var disqus_config = function () {
+this.page.url = '{{ site.url }}' + '{{ page.url }}';
+this.page.identifier = '{{ page.url }}';
+};
+
+var disqus_developer = 1;
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://jstaffans-github-io.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
