--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 @import 'basscss';
 
 $accent: #FF6400;
+$grey: #CCC;
 $grey-dark: #6F6F6F;
 $grey-darker: #333333;
 $white: #FFF;
@@ -13,8 +14,8 @@ h1, h2, h3, h4, h5, h6 {
 body {
   font-family: 'Merriweather', serif;
   color: $grey-darker;
-  line-height: 1.5;
-  margin: 0;
+  line-height: 1.6;
+  margin: 0 0 80px 0;
 }
 
 a, a:visited, a:hover {
@@ -33,6 +34,11 @@ a, a:visited, a:hover {
   &__headline {
     font-size: 2.8rem;
     margin: 0;
+
+    a {
+      color: $grey-darker;
+      text-decoration: none !important;
+    }
   }
 
   a {
@@ -42,6 +48,7 @@ a, a:visited, a:hover {
       text-decoration: underline;
     }
   }
+
 
   .border-triangle {
     height: 30px;
@@ -63,4 +70,18 @@ a, a:visited, a:hover {
   max-width: 900px;
   margin: 30px auto;
   padding: 0 32px;
+}
+
+.posts {
+  &__date {
+    width: 120px;
+  }
+}
+
+blockquote {
+  margin-left: 20px;
+  padding-left: 10px;
+  border-left: 5px solid $grey;
+  color: $grey-dark;
+  font-style: italic;
 }
