refactor namespace, syntax highlighting

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,10 @@
 @import 'basscss';
+@import 'pygments';
 
 $width: 900px;
 
 $accent: #FF6400;
-$grey-bg: #EEE;
+$grey-bg: #F8F8F8;
 $grey: #CCC;
 $grey-dark: #6F6F6F;
 $grey-darker: #333333;
